fix mobile footer alignment

--- a/src/app.scss
+++ b/src/app.scss
@@ -456,6 +456,12 @@ footer {
   span {
     color: white;
   }
+
+  p {
+    @media (max-width: 800px) {
+      text-align: unset;
+    }
+  }
 }
 
 .no-underline {
